--- a/TestApp.Web/TestApp.Web.csproj
+++ b/TestApp.Web/TestApp.Web.csproj
@@ -200,6 +200,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestApp.Resource\TestApp.Resource.csproj">
+      <Project>{3dc2b073-7fa8-401a-8345-ef0eada4757c}</Project>
+      <Name>TestApp.Resource</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
