--- a/TestApp.Web/Views/Web.config
+++ b/TestApp.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="TestApp.Web" />
+        <add namespace="TestApp.Resource"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
